--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<html lang="en">
-<head>
-  <meta charset="utf-8">
+---
+layout: default
+---
 
-  <title>Earthly Wilds</title>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
-    <h1>Earthly Wilds</h1>
-    <p>A blog about developing regenerative earth skills.</p>
-</body>
-</html>
+<h1>Home page</h1>
+<p>A blog about developing regenerative earth skills.</p>
