--- a/permaculture-articles.html
+++ b/permaculture-articles.html
@@ -1,15 +1,15 @@
 ---
-layout: default
+layout: blog
 ---
 
-<h1>Home page</h1>
-<p>A blog about developing regenerative earth skills.</p>
+<h1>Permaculture Articles!</h1>
 
 <ul>
-    {% for post in site.posts limit: 12 %}
+    {% for post in site.categories.permaculture %}
         <li>
             <a href="">{{post.title}}</a>
             <p>{{post.meta}}</p>
         </li>
     {% endfor %}
 </ul>
+
