created nav links to all blog categories

--- a/rewilding-articles.html
+++ b/rewilding-articles.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<h1>Permaculture Articles!</h1>
+<h1>Rewilding Articles!</h1>
 
 <ul>
-    {% for post in site.categories.permaculture %}
+    {% for post in site.categories.rewilding %}
         <li>
             <a href="">{{post.title}}</a>
             <p>{{post.meta}}</p>
