--- a/philosophy-articles.html
+++ b/philosophy-articles.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<h1>Permaculture Articles!</h1>
+<h1>Philosophy Articles!</h1>
 
 <ul>
-    {% for post in site.categories.permaculture %}
+    {% for post in site.categories.philosophy %}
         <li>
             <a href="">{{post.title}}</a>
             <p>{{post.meta}}</p>
