--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <ul>
     {% for post in site.posts limit: 12 %}
         <li>
-            <a href="">{{post.title}}</a>
+            <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
         </li>
     {% endfor %}
