--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+titleAfter: Premaculture and regenerative earth sills development.
+meta: Topics range from Permaculture and Rewilding, to Art, Philosophy and Activism.
 ---
 
-<h1>Home page</h1>
 <p>A blog about developing regenerative earth skills.</p>
 
 <ul>
