--- a/off-grid.html
+++ b/off-grid.html
@@ -1,11 +1,12 @@
 ---
 layout: default
+title: Off-Grid
 ---
 
-<h1>Activism Articles!</h1>
+<h1>Off Grid Articles!</h1>
 
 <ul>
-    {% for post in site.categories.activism %}
+    {% for post in site.categories.off-grid %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
