imported image layout from milesrose.net

--- a/permaculture.html
+++ b/permaculture.html
@@ -6,7 +6,7 @@ title: Permaculture
 <h1>Permaculture Articles!</h1>
 
 <ul>
-    {% for post in site.categories.permaculture %}
+    {% for post in site.categories.Permaculture %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
