--- a/arts.html
+++ b/arts.html
@@ -6,7 +6,7 @@ title: Arts
 <h1>Art Articles!</h1>
 
 <ul>
-    {% for post in site.categories.arts %}
+    {% for post in site.categories.Arts %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
