--- a/off-grid.html
+++ b/off-grid.html
@@ -6,7 +6,7 @@ title: Off-Grid
 <h1>Off Grid Articles!</h1>
 
 <ul>
-    {% for post in site.categories.off-grid %}
+    {% for post in site.categories.Off-Grid %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
