--- a/philosophy.html
+++ b/philosophy.html
@@ -6,7 +6,7 @@ title: Philosophy
 <h1>Philosophy Articles!</h1>
 
 <ul>
-    {% for post in site.categories.philosophy %}
+    {% for post in site.categories.Philosophy %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
