--- a/rewilding.html
+++ b/rewilding.html
@@ -6,7 +6,7 @@ title: Rewilding
 <h1>Rewilding Articles!</h1>
 
 <ul>
-    {% for post in site.categories.rewilding %}
+    {% for post in site.categories.Rewilding %}
         <li>
             <a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
             <p>{{post.meta}}</p>
