finished search page, design tweaks elsewhere

--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@ layout: default
 title: Search
 ---
 
-<div id="search-page">
+<div id="non-post-page">
     <h1 id="category-title">Search Earthly Wilds!</h1>
 
     <div id="search-container">
