--- a/about.html
+++ b/about.html
@@ -3,19 +3,21 @@ layout: default
 title: About
 ---
 
-<h1 id="category-title">About Earthly Wilds</h1>
+<div id="non-post-page">
 
-<p>
+    <h1 id="category-title">About Earthly Wilds</h1>
 
-Lorem ipsum asperiores ea ratione fuga eius. Voluptatem minus animi et et. Dignissimos ut dolores explicabo minima ut voluptas.
+    <p>
 
-Et sunt ullam voluptatem. Assumenda dolorem dolor quos. Quod explicabo rerum tempore dolor animi vel voluptatem qui. Ut eligendi dignissimos dolore sint velit rerum ducimus voluptate.
+    Lorem ipsum asperiores ea ratione fuga eius. Voluptatem minus animi et et. Dignissimos ut dolores explicabo minima ut voluptas.
 
-Quaerat repudiandae adipisci praesentium blanditiis cupiditate corporis. Minus nihil rerum qui animi fugit est. Aut illum in voluptatum recusandae est repellat voluptate vel. Mollitia quia aut magni facere voluptatibus voluptates iure perferendis. Adipisci animi quam nemo optio enim tempora. Beatae aut sunt eligendi tenetur doloribus nihil consequuntur reiciendis.
+    Et sunt ullam voluptatem. Assumenda dolorem dolor quos. Quod explicabo rerum tempore dolor animi vel voluptatem qui. Ut eligendi dignissimos dolore sint velit rerum ducimus voluptate.
 
-Ut reprehenderit et qui. Neque velit modi nulla. Quo non ratione molestiae sunt velit. Dolorum sapiente soluta cupiditate rerum. Sapiente incidunt id quidem in. Possimus ab omnis quam praesentium amet aut.
+    Quaerat repudiandae adipisci praesentium blanditiis cupiditate corporis. Minus nihil rerum qui animi fugit est. Aut illum in voluptatum recusandae est repellat voluptate vel. Mollitia quia aut magni facere voluptatibus voluptates iure perferendis. Adipisci animi quam nemo optio enim tempora. Beatae aut sunt eligendi tenetur doloribus nihil consequuntur reiciendis.
 
-Rerum aut est similique corrupti dicta incidunt voluptas. Quis tenetur nesciunt ratione quam. Ut et itaque laudantium et voluptates ut dolorum saepe.
+    Ut reprehenderit et qui. Neque velit modi nulla. Quo non ratione molestiae sunt velit. Dolorum sapiente soluta cupiditate rerum. Sapiente incidunt id quidem in. Possimus ab omnis quam praesentium amet aut.
 
-</p>
+    Rerum aut est similique corrupti dicta incidunt voluptas. Quis tenetur nesciunt ratione quam. Ut et itaque laudantium et voluptates ut dolorum saepe.
 
+    </p>
+</div>
