--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@ title: Search
     SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
         resultsContainer: document.getElementById('results-container'),
-        json: '/search.json'
+        json: '{{site.baseurl}}/search.json'
     })
     </script>
 </div>
